# artstation-rust-backend

./: .env  .gitignore  Cargo.toml
src/: common.rs  main.rs
src/api/: admin.rs  mod.rs  projects.rs  reports.rs  schedules.rs  students.rs  teachers.rs  transactions.rs  tuitions.rs  users.rs  util.rs
src/data/: artwork_comment.json  data.json  profile.json  project.json
src/models/: admin.rs  asset.rs  mod.rs  project.rs  report.rs  schedule.rs  student.rs  teacher.rs  user.rs
