[package]
name = "lighters-rust-server"
version = "0.1.0"
authors = ["Ningzhou Zeng <nxz84@case.edu>"]
edition = "2018"

[dependencies]
log = "0.4.7"
env_logger = "0.7.1"
chrono = "0.4.10"
actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-identity = "0.2.0"
listenfd = "0.3"
mongodb = "0.9.2"
bson = "0.14.0"
json = "0.12.4"
bcrypt = "0.8.0"
lazy_static = "1.4.0"
jsonwebtoken = "7.1.0"
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"